--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "hugo-neodoc",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "author": "Florian Köhler",
+  "bugs": {
+    "url": "https://github.com/flokoe/hugo-neodoc/issues"
   },
+  "comments": {
+    "dependencies": {
+      "alpinejs": "project"
+    },
+    "devDependencies": {
+      "@tailwindcss/cli": "project",
+      "tailwindcss": "project"
+    }
+  },
+  "dependencies": {
+    "alpinejs": "^3.14.9"
+  },
+  "description": "",
+  "devDependencies": {
+    "@tailwindcss/cli": "^4.1.5",
+    "tailwindcss": "^4.1.5"
+  },
+  "homepage": "https://github.com/flokoe/hugo-neodoc#readme",
+  "license": "MIT",
+  "main": "index.js",
+  "name": "hugo-neodoc",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/flokoe/hugo-neodoc.git"
   },
-  "author": "Florian Köhler",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/flokoe/hugo-neodoc/issues"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/flokoe/hugo-neodoc#readme",
-  "devDependencies": {
-    "@tailwindcss/cli": "^4.1.5",
-    "tailwindcss": "^4.1.5"
-  }
+  "version": "0.1.0"
 }
