--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@tailwindcss/cli": "^4.1.5",
     "tailwindcss": "^4.1.5"
   },
+  "engines": {
+    "node": "22"
+  },
   "homepage": "https://github.com/flokoe/hugo-neodoc#readme",
   "license": "MIT",
   "main": "index.js",
