--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,3 +8,17 @@
 #   - name: About
 #     pageRef: /about
 #     weight: 20
+
+# Social links will be shown in the footer and/or header.
+# Links will display icons if the icon is set.
+social:
+  - name: GitHub
+    url: https://github.com/flokoe/hugo-neodoc
+    weight: 10
+    params:
+      icon: github
+  - name: BlueSky
+    url: https://bsky.app/profile/flokoe.de
+    weight: 20
+    params:
+      icon: bluesky
