--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,6 +14,11 @@ menus:
     pageRef: /tags
     weight: 30
 
+params:
+  modules:
+    neodoc:
+      author: Florian Köhler
+
 build:
   buildStats:
     enable: true
